--- a/res/css/style.css
+++ b/res/css/style.css
@@ -200,7 +200,7 @@
 */
 
 #venue {
-  background-image: url("../images/bg-venue.jpg");
+  background-image: url("../images/bg-home-3.jpg");
   background-position: center bottom !important;
 }
 
